--- a/catalog.html
+++ b/catalog.html
@@ -61,7 +61,8 @@
               <li class=" breadcrumbs-item">
                 <span class="visually-hidden">Главная</span>
                 <a href="index.html" class="breadcrumbs-link">
-                  <svg class="breadcrumbs-icon" aria-hidden="true" focusable="false" fill="currentColor" xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 13 13">
+                  <svg class="breadcrumbs-icon" aria-hidden="true" focusable="false" fill="currentColor"
+                    xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 13 13">
                     <path d="m6.5.5-6 5.8v6.2h12V6.3L6.5.5Zm5 11h-10V6.7l5-4.8 5 4.8v4.8Z"></path>
                     <path d="M4.5 10.5h1V8h2v2.5h1V7h-4v3.5Z"></path>
                   </svg>
@@ -78,16 +79,26 @@
                 <legend class="hotel-filter-title">Инфраструктура</legend>
                 <ul class="hotel-filter-list">
                   <li class="hotel-filter-item">
-                    <label class="control" for="swimming-pool">Бассейн</label>
-                    <input id="swimming-pool" name="swimming-pool" type="checkbox" checked>
+                    <label class="control" for="swimming-pool">
+                      <input class="control-input visually-hidden" id="swimming-pool" name="swimming-pool"
+                        type="checkbox" checked>
+                      <span class="control-mark"></span>
+                      Бассейн
+                    </label>
                   </li>
                   <li class="hotel-filter-item">
-                    <label class="control" for="parking">Парковка</label>
-                    <input id="parking" name="parking" type="checkbox" checked>
+                    <label class="control" for="parking">
+                      <input class="control-input visually-hidden" id="parking" name="parking" type="checkbox" checked>
+                      <span class="control-mark"></span>
+                      Парковка
+                    </label>
                   </li>
                   <li class="hotel-filter-item">
-                    <label class="control" for="wi-fi">Wi-Fi</label>
-                    <input id="wi-fi" name="wi-fi" type="checkbox">
+                    <label class="control" for="wi-fi">
+                      <input class="control-input visually-hidden" id="wi-fi" name="wi-fi" type="checkbox">
+                      <span class="control-mark"></span>
+                      Wi-Fi
+                    </label>
                   </li>
                 </ul>
               </fieldset>
@@ -95,26 +106,51 @@
                 <legend class="hotel-filter-title">Тип Жилья</legend>
                 <ul class="hotel-filter-list">
                   <li class="hotel-filter-item">
-                    <label class="control" for="hotel">Гостиница</label>
-                    <input id="hotel" name="hotel-type" value="hotel" type="radio" checked>
+                    <label class="control" for="hotel">
+                      <input class="control-input visually-hidden" id="hotel" name="hotel-type" value="hotel"
+                        type="radio" checked>
+                      <span class="control-mark"></span>
+                      Гостиница
+                    </label>
                   </li>
                   <li class="hotel-filter-item">
-                    <label class="control" for="motel">Мотель</label>
-                    <input id="motel" name="hotel-type" value="motel" type="radio">
+                    <label class="control" for="motel">
+                      <input class="control-input visually-hidden" id="motel" name="hotel-type" value="motel"
+                        type="radio">
+                      <span class="control-mark"></span>
+                      Мотель
+                    </label>
                   </li>
                   <li class="hotel-filter-item">
-                    <label class="control" for="apartments">Апартаменты</label>
-                    <input id="apartments" name="hotel-type" value="apartments" type="radio">
+                    <label class="control" for="apartments">
+                      <input class="control-input visually-hidden" id="apartments" name="hotel-type" value="apartments"
+                        type="radio">
+                      <span class="control-mark"></span>
+                      Апартаменты
+                    </label>
                   </li>
                 </ul>
               </fieldset>
-              <fieldset class="hotel-filter-group">
-                <legend class="hotel-filter-title">Стоимость жилья, ₽:</legend>
-                <label class="control-range" for="range-min">От</label>
-                <input class="control-input-range" id="range-min" value="0" min="0" max="9000" placeholder="от">
-                <label class="control-range" for="range-max">До</label>
-                <input class="control-input-range" id="range-max" value="9000" min="0" max="9000" placeholder="до">
-                <p>здесь будет шкала</p>
+              <fieldset class="hotel-filter-group price-filter">
+                <legend class="hotel-filter-title">Стоимость, ₽:</legend>
+                <div class="range-wrapper-inputs">
+                  <label class="control-range-label visually-hidden" for="range-min">От</label>
+                  <input type="number" class="control-input-range" id="range-min" value="0" min="0" max="9000"
+                    name="min-price">
+                  <label class="control-range-label visually-hidden" for="range-max">До</label>
+                  <input type="number" class="control-input-range" id="range-max" value="9000" min="0" max="9000"
+                    name="max-price">
+                </div>
+                <div class="range-scale">
+                  <div class="range-bar" style="width: 226px; left: 0;">
+                    <button type="button" class="range-toggle toggle-min">
+                      <span class="visually-hidden">Изменить минимальную цену</span>
+                    </button>
+                    <button type="button" class="range-toggle toggle-max">
+                      <span class="visually-hidden">Изменить максимальную цену</span>
+                    </button>
+                  </div>
+                </div>
               </fieldset>
               <div class="filter-button-container">
                 <button class="filter-button" type="submit">Применить</button>
@@ -255,7 +291,7 @@
             <button class="button subscribe-button" type="submit">Подписаться</button>
           </form>
         </section>
-        <div class="contacts-container">
+        <div class="contacts-container" data-test="footer">
           <section class="socials">
             <ul class="social-list">
               <li class="social-item">
@@ -296,8 +332,8 @@
           <section class="copyright">
             <a class="copyright-link" href="https://htmlacademy.ru/">
               <svg class="htmlacademy-logo" role="img" aria-label="Логотип компании-разработчика HTML-Academy"
-                aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="115"
-                height="34" viewBox="0 0 115 34">
+                aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="115" height="34"
+                viewBox="0 0 115 34">
                 <path
                   d="M0 13.26v2.6h2.5v-2.6H0ZM11.6 4.86c-1.6 0-2.8.7-3.6 1.7h-.1V.36h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2v-6.1c.1-3-1.8-4.9-4.5-4.9ZM26.6 5.16h-4.8v-3.7h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1v-5.7h4.8v-2ZM41.1 4.96c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1v-1.6H29v10.6h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 13.06c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V.36h-2v12.7ZM28.9 20.06c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22.36c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1v-.2ZM55.1 20.06c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 20.16c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2v-15.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 18.26c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6ZM98.2 18.26c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27.36l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z">
                 </path>
