--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <a href="#" class="button search-button">Поиск гостиницы в Cедоне</a>
         </section>
       </main>
-      <footer class="page-footer" data-test="footer">
+      <footer class="page-footer">
         <section class="subscribe" data-test="subscribe">
           <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
           <p class="subscribe-subtitle">Только полезная информация и никакого спама, честное бойскаутское!</p>
@@ -126,7 +126,7 @@
             <button class="button subscribe-button" type="submit">Подписаться</button>
           </form>
         </section>
-        <div class="contacts-container">
+        <div class="contacts-container"  data-test="footer">
           <section class="socials">
             <ul class="social-list">
               <li class="social-item">
